Fix line-clamp overflowing text bug

--- a/src/components/ClipListItem/ClipListItem.scss
+++ b/src/components/ClipListItem/ClipListItem.scss
@@ -23,8 +23,8 @@
 
       .text-wrapper {
         h3 {
-          margin-bottom: 0;
-          padding-bottom: 9px;
+          margin-bottom: 9px;
+          padding-bottom: 0;
 
           @include line-clamp(4);
         }
