--- a/src/components/EpisodeListItem/EpisodeListItem.scss
+++ b/src/components/EpisodeListItem/EpisodeListItem.scss
@@ -24,8 +24,8 @@
         flex: 1;
 
         h3 {
-          margin-bottom: 0;
-          padding-bottom: 9px;
+          margin-bottom: 9px;
+          padding-bottom: 0;
 
           @include line-clamp(4);
         }
